--- a/P&E_Multilink_USB.ini
+++ b/P&E_Multilink_USB.ini
@@ -5,12 +5,12 @@ PORT=21
 interface_selection=1
 SHOWDIALOG=0
 IO_DELAY_SET=1
-frequency_has_changed_old_io_delay_cnt=49
+frequency_has_changed_old_io_delay_cnt=18
 CyclonePro_poweroffonexit=0
 CyclonePro_currentvoltage=255
 CyclonePro_PowerDownDelay=250
 CyclonePro_PowerUpDelay=250
-IO_DELAY_CNT=49
+IO_DELAY_CNT=9
 PCI_DELAY=0
 RESET_DELAY=0
 
@@ -37,6 +37,20 @@ LoadDialogOptions=AUTOERASEANDFLASH RUNANDSTOPAFTERLOAD="main"
 CPU=HC12
 MainFrame=2,3,-1,-1,-1,-1,50,49,1490,810
 TOOLBAR=57600 57601 32795 0 57635 57634 57637 0 57671 57669 0 32777 32776 32782 32780 32781 32778 0 32806
+AEFWarningDialog=FALSE
+Configuration=P&E_Multilink_USB.hwc
+Statusbar=1
+ShowToolbar=1
+Smallborder=0
+Hideheadline=0
+Hidetitle=0
+
+
+
+
+
+
+
 
 
 
@@ -67,11 +81,11 @@ NV_AUTO_ID=1
 [ICD12]
 COMSETTINGS=SETCOMM DRIVER NOPROTOCOL NOPERIODICAL
 SETCLKSW=0
-HOTPLUGGING=0
+HOTPLUGGING=1
 DETECTRUNNING=0
 RESYNCONCOPRESET=0
 BDMAutoSpeed=0
-BDMClockSpeed=49
+BDMClockSpeed=9
 HIGHIODELAYCONSTFORPLL=40
 
 [PORT]
@@ -79,14 +93,14 @@ IP=
 
 
 [Recent Applications File List]
-File0=F:\bigdog\bigdog\bin\Project.abs
-File1=
-File2=
-File3=
-LoadFlags0=AUTOERASEANDFLASH RUNANDSTOPAFTERLOAD="main"
-LoadFlags1=
-LoadFlags2=
-LoadFlags3=
+File0=D:\WorkSpace\bigdog\bin\Project.abs
+File1=D:\WorkSpace\bigdog\bin\Project.abs.s19
+File2=D:\WorkSpace\FY-169prj\actor\bingo\bin\MC9S12G128_FY_169v1.1_2017_05_09.s19
+File3=F:\bigdog\bigdog\bin\Project.abs
+LoadFlags0=AUTOERASEANDFLASH RUNANDSTOPAFTERLOAD="main" 
+LoadFlags1=AUTOERASEANDFLASH RUNANDSTOPAFTERLOAD="main"
+LoadFlags2=AUTOERASEANDFLASH RUNANDSTOPAFTERLOAD="main"
+LoadFlags3=AUTOERASEANDFLASH RUNANDSTOPAFTERLOAD="main"
 
 
 [Recent Layout File List]
