--- a/P&E_Multilink_USB.ini
+++ b/P&E_Multilink_USB.ini
@@ -67,7 +67,7 @@ CHIPSECURE=CHIPSECURE SETUP 0xFF0F 0x3 0x2
 DBG0=DBG GENERAL DISARM_ON PROTECT_OFF ANALYZE_ON STEPATRUN_ON
 DBG1=DBG PREDEFINED SELECT 0
 DBG2=DBG PREDEFINED DBGENGINE TRACE ENABLE RECORDAFTER PUREPC
-NV_PARAMETER_FILE=C:\Program Files (x86)\Freescale\CWS12v5.1\prog\FPP\mcu01C2.fpp
+NV_PARAMETER_FILE=
 NV_SAVE_WSP=0
 NV_AUTO_ID=1
 
